Web: Add bootstrap custom color (sass). edit landing page

--- a/Threads.Web/src/App.css
+++ b/Threads.Web/src/App.css
@@ -226,10 +226,10 @@ form .btn .spinner-border {
 }
 
 .btn-floating-circle {
-    border-radius: 100%;
+    border-radius: 100% !important;
     box-shadow: 0 0 0.5rem 0 #aaa !important;
     padding: 10px !important;
-    display: flex;
+    display: flex !important;
 }
 
 .btn-image-close {
