Web: Show list of thread likes

--- a/Threads.Web/src/App.css
+++ b/Threads.Web/src/App.css
@@ -219,8 +219,9 @@ form .btn .spinner-border {
 }
 
 .link-dark {
-    color: #888 !important;
+    color: #777 !important;
     text-decoration: none;
+    cursor: pointer;
 }
 
 .link-dark:hover {
